--- a/public/index.html
+++ b/public/index.html
@@ -49,11 +49,21 @@
     <meta name="msapplication-tap-highlight" content="">
 
     <style>
+      html {
+        font-family: Arial, sans-serif;
+      }
 
+      body {
+        margin: 0;
+        padding: 0;
+      }
     </style>
   </head>
   <body>
-    Hello World
+    <protobot-designer-ui>
+</protobot-designer-ui>
+
+<script type="module" src="./index.js"></script>
 
   </body>
 
