style: fix some font issues and header

--- a/public/index.html
+++ b/public/index.html
@@ -49,9 +49,10 @@
     <meta name="msapplication-tap-highlight" content="">
 
     <style>
-      html {
+      /* html {
         font-family: Arial, sans-serif;
-      }
+      } */
+      @import url('https://fonts.googleapis.com/css?family=Montserrat|Josefin+Sans|Open+Sans&display=swap');
 
       body {
         margin: 0;
