--- a/public/index.html
+++ b/public/index.html
@@ -201,7 +201,7 @@
               var count = 0;
               do {
                 var target = paths[source];
-                console.log(source, target, name, count)
+                // console.log(source, target, name, count)
                 count++;
                 if (!target) {
                   break;
