fix: add mini fix

--- a/public/index.html
+++ b/public/index.html
@@ -208,7 +208,7 @@
                 } else if (target !== name) {
                   source = paths[source];
                 } else {
-                  console.log(target, name, 'hey')
+                  // console.log(target, name, 'hey')
                   flag2 = false;
                   break;
                 }
@@ -234,11 +234,11 @@
           //   break;
           // }
           var length2 = nextNodes.length;
-          console.log(nextNodes);
-          if (length === length2) {
+          // console.log(nextNodes);
+          // if (length === length2) {
 
-            // break;
-          }
+          //   // break;
+          // }
           remainingNodes = nextNodes;
           ++x;
           noTopicNode.x = x - 1;
